[package]
name = "simple_asn1"
version = "0.4.1"
authors = ["Adam Wick <awick@uhsure.com>"]
description = "A simple DER/ASN.1 encoding/decoding library."
categories = ["encoding"]
keywords = ["ASN1","encoding","DER"]
license = "ISC"
repository = "https://github.com/acw/simple_asn1"

[dependencies]
chrono     = { git = "https://github.com/mesalock-linux/chrono-sgx", tag = "sgx_1.1.1" }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx", tag = "sgx_1.1.1" }
num-traits = { git = "https://github.com/mesalock-linux/num-traits-sgx", tag = "sgx_1.1.1" }
sgx_tstd = { rev = "v1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
# quickcheck = "^0.7.1"
# rand = "0.5.5"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
